src/objects/Trainee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Trainee__c</referenceTo>
        <relationshipLabel>Trainees</relationshipLabel>
        <relationshipName>Trainees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainee1__c</fullName>
        <label>Trainee1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainee2__c</fullName>
        <label>Trainee2</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainee3__c</fullName>
        <label>Trainee3</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainerId__c</fullName>
        <label>TrainerId</label>
        <referenceTo>Trainer__c</referenceTo>
        <relationshipLabel>TrainerId</relationshipLabel>
        <relationshipName>Trainees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Trainee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>